@@ -65,6 +65,7 @@
 "Cancel":"Abbrechen",
 "Category":"Kategorie",
 "Change library":"Sammlung wechseln",
+"Changes":"Änderungen",
 "Check the standard items which you wish to appear on the home screen.":"Wähle die Einträge aus, die im Hauptmenü erscheinen sollen.",
 "Choose position":"Position wählen",
 "Clear":"Leeren",
@@ -77,6 +78,7 @@
 "Composers":"Komponisten",
 "Conductors":"Dirigenten",
 "Continuous":"Kontinuierlich",
+"Copy details":"Details kopieren",
 "Country":"Land",
 "Create":"Erstellen",
 "Create folder":"Ordner erstellen",
@@ -230,6 +232,9 @@
 "Player settings":"Geräteeinstellungen",
 "Players":"Player",
 "Playing":"Wiedergabe",
+"Playing %1":"%1 wird wiedergegeben",
+"Playing %1 by %2":"%1 von %2 wird wiedergegeben",
+"Playing %1 by %2 from %3":"%1 von %2 aus %3 wird wiedergegeben",
 "Power on all group members when playing to group.":"Alle Gruppenmitglieder einschalten, wenn Wiedergabe auf Gruppe gestartet wird.",
 "Power on all upon play":"Alle Geräte bei Wiedergabe einschalten",
 "Power on/off all":"Alle Geräte ein-/ausschalten",
@@ -237,6 +242,7 @@
 "Previous/next long-press skip":"Vorheriger/Nächster Titel gedrückt halten",
 "Provider":"Anbieter",
 "Queue":"Warteschlange",
+"Quit":"Beenden",
 "Random Albums":"Zufällige Alben",
 "Random Mix":"Zufällige Wiedergabe",
 "Remaining duration of current track":"Verbleibende Dauer des aktuellen Titels",
@@ -439,9 +445,8 @@
 "Alt+%1":"",
 "Alt+N":"",
 "Audio":"",
-"Changes":"Änderungen",
-"Copy details":"Details kopieren",
 "Disc %1":"",
+"Do not crossfade successive tracks from the same album.":"",
 "E-Mail":"",
 "Firmware: %1":"",
 "IP: %1":"",
@@ -450,13 +455,10 @@
 "Name":"",
 "OK":"",
 "Pause":"",
-"Playing %1":"%1 wird wiedergegeben",
-"Playing %1 by %2":"%1 von %2 wird wiedergegeben",
-"Playing %1 by %2 from %3":"%1 von %2 aus %3 wird wiedergegeben",
 "Plugins":"",
-"Quit":"Beenden",
 "Radio":"",
 "Server":"",
+"Smart crossfade":"",
 "Start":"",
 "URL":"",
 "Version":"",
