@@ -117,6 +117,7 @@
 "Disc %1":"",
 "Display rating stars.":"",
 "Display technical info":"",
+"Do not crossfade successive tracks from the same album.":"",
 "Do not sleep":"",
 "Don't Stop The Music":"",
 "Don't know how to handle this!":"",
@@ -345,6 +346,7 @@
 "Shutdown":"",
 "Signal Strength: %1%":"",
 "Sleep":"",
+"Smart crossfade":"",
 "Smart gain":"",
 "Snooze (minutes)":"",
 "Something went wrong!":"",
