@@ -333,6 +333,7 @@
 "Description":"",
 "Disc %1":"",
 "Display rating stars.":"",
+"Do not crossfade successive tracks from the same album.":"",
 "Don't Stop The Music":"",
 "Downloading plugin updates":"",
 "Drop here to remove from group":"",
@@ -420,6 +421,7 @@
 "Shuffle":"",
 "Shuffle albums":"",
 "Shutdown":"",
+"Smart crossfade":"",
 "Smart gain":"",
 "Spacebar":"",
 "Standard font size":"",
