@@ -20,6 +20,8 @@
 14. Use unfilled circle for inactive items in jumplist where there is no key
     when using list as well as grid.
 15. Fix missing dividers in 'Settings' and 'Player settings' dialogs.
+16. Add 'Smart crossfade' to 'Player settings' dialog.
+17. Only update changed player settings.
 
 1.8.2
 -----
